// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loadAnalysis fluctuation 1`] = `
Object {
  "start": 1,
  "step": 1,
  "y": Object {},
}
`;

exports[`loadAnalysis rgyr 1`] = `
Object {
  "start": 0,
  "step": 10,
  "y": Object {},
}
`;

exports[`loadAnalysis rmsd 1`] = `
Object {
  "start": 0,
  "step": 10,
  "y": Object {},
}
`;
